tests/positive/test-success-call.rooc
fun add(a: int, b: int) -> int {
    return a + b;
}

fun main() -> int {
    print_int(add(2, 3));
    return 0;
}