tests/negative/test-fail-var2.rooc
fun main() -> int {
    let z:const = 2;    
    print_int(z);
    return 0;
}